compiler/testData/diagnostics/tests/incompleteCode/variableDeclarationInSelector.fir.kt
fun foo(s: String) {
    s.<!SYNTAX!><!>
    val b = 42
}
